# Auto_006

./: README.md  pyproject.toml
Auto_06/: 3_Les.py  4.Les.py  5.Les.py  HW_1.py  HW_2.py  HW_3.py  HW_4.py  pyproject.toml
