[tool.poetry]
name = "auto-06"
version = "0.1.0"
description = ""
authors = ["LiudmilaDankevich <Dankevich_79@mail.ru>"]
readme = "README.md"
packages = [{include = "auto_06"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

